# record-segmentation

./: CHANGELOG.md  MANIFEST.in  README.md  build.txt  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark.py
src/record_segmentation/: __init__.py  builders.py  errors.py  types.py
src/record_segmentation/config/: __init__.py  models.py
src/record_segmentation/detectors/: __init__.py  base.py  factory.py  keyword.py  predicate.py  regex_detector.py
src/record_segmentation/models/: __init__.py  segment.py
src/record_segmentation/splitters/: __init__.py  policies.py  split.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_detector_and_splitter_flow.py  test_large_like_stream.py  test_parser_like_pipeline.py  test_streaming_generator_flow.py
tests/unit/: test_builders.py  test_errors.py  test_types.py
tests/unit/config/: test_models.py
tests/unit/detectors.py/: __init__.py  test_base.py  test_factory.py  test_keyword.py  test_predicate.py  test_regex.py
tests/unit/models/: __init__.py  test_segment.py
tests/unit/splitters/: __init__.py  test_split.py  tets_policies.py
