# ============================================================================
# Build system
# ============================================================================
# PEP 517/518 build configuration.
# `setuptools` is a solid default for a small typed library.
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"


# ============================================================================
# Project metadata
# ============================================================================
[project]
name = "record-segmentation"
dynamic = ["version"]
description = "Streaming record-boundary detection and splitting for line-oriented text."
readme = "README.md"
requires-python = ">=3.10"

# License reference (recommended modern form)
license = { file = "LICENSE" }

authors = [
  { name = "Timur Anvar" }
]

# These help discoverability on PyPI.
keywords = [
  "segmentation",
  "streaming",
  "logs",
  "parsing",
  "records",
  "text-processing",
]

# Trove classifiers shown on PyPI.
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
  "Topic :: System :: Logging",
]

# Runtime dependencies.
# Keep empty unless the library truly requires external packages at runtime.
dependencies = []


# ============================================================================
# Optional dependency groups
# ============================================================================
[project.optional-dependencies]

# Development tools used locally and in CI.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.8",
  "ruff>=0.6",
]

# Documentation toolchain.
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]


# ============================================================================
# Project URLs
# ============================================================================
[project.urls]
Homepage = "https://github.com/DreamyStranger/record-segmentation"
Repository = "https://github.com/DreamyStranger/record-segmentation"
Issues = "https://github.com/DreamyStranger/record-segmentation/issues"
Documentation = "https://github.com/DreamyStranger/record-segmentation"


# ============================================================================
# setuptools package discovery
# ============================================================================
[tool.setuptools]

# `src/` layout prevents accidental imports from the repo root.
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "record_segmentation.__version__" }

[tool.setuptools.package-data]

# Include the marker file so downstream type checkers know this package ships types.
record_segmentation = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]


# ============================================================================
# pytest
# ============================================================================
[tool.pytest.ini_options]

# Restrict test discovery to the tests/ tree.
testpaths = ["tests"]

# Quiet output with additional summary info for skipped/xfailed tests.
addopts = "-q -ra"


# ============================================================================
# Ruff
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]

# Common useful rules:
# E,F  -> pycodestyle / pyflakes
# I    -> import sorting
# B    -> bugbear
# UP   -> pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


# ============================================================================
# mypy
# ============================================================================
[tool.mypy]
python_version = "3.10"

# Strict typing is a good fit for small, well-contained libraries.
strict = true

warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
pretty = true

# Limit checking to the package itself.
packages = ["record_segmentation"]